# reddit-data-pipeline

./: README.md  hello.py  pyproject.toml
data-extraction/etls/: reddit_etl.py
data-extraction/pipeline/: reddit_etl.py
data_extraction/config/: example_conf.conf
data_extraction/etls/: reddit_etl.py
data_extraction/pipeline/: reddit_etl.py
data_extraction/utils/: constants.py
