[project]
name = "reddit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.9.2",
    "dbt-postgres>=1.9.0",
    "fastapi>=0.115.8",
    "mkdocs>=1.6.1",
    "praw>=7.8.1",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "streamlit>=1.41.1",
]
